--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+# Create HTML with 12 hardcoded questions to ensure GitHub Pages compatibility
+hardcoded_questions = ""
+for i in range(1, 13):
+    hardcoded_questions += f"""
+    <div class="question" data-answer="b">
+      <h3>{i}. What typically lags GDP contraction during a downturn?</h3>
+      <div class="options">
+        <button>A. Stock prices</button>
+        <button data-correct="true">B. Employment</button>
+        <button>C. Consumer spending</button>
+        <button>D. Export levels</button>
+      </div>
+      <div class="explanation">Employment tends to lag GDP as companies delay layoffs.</div>
+    </div>
+    """
+
+html_hardcoded = f"""
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,34 +22,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Economic Insights Quiz</title>
   <style>
-    body {
+    body {{
       font-family: Arial, sans-serif;
       background-color: #eef2f7;
       margin: 0;
       padding: 0;
-    }
-    header {
+    }}
+    header {{
       background: linear-gradient(to right, #1e3a8a, #2563eb);
       color: white;
       padding: 20px;
       text-align: center;
       font-size: 1.5rem;
-    }
-    .quiz-container {
+    }}
+    .quiz-container {{
       background: white;
       max-width: 800px;
       margin: 30px auto;
       padding: 30px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .question {
+    }}
+    .question {{
       margin-bottom: 20px;
-    }
-    .question h3 {
+    }}
+    .question h3 {{
       margin-bottom: 10px;
-    }
-    .options button {
+    }}
+    .options button {{
       display: block;
       width: 100%;
       margin: 6px 0;
@@ -42,34 +59,34 @@
       border-radius: 5px;
       cursor: pointer;
       text-align: left;
-    }
-    .options button:hover {
+    }}
+    .options button:hover {{
       background-color: #e5e7eb;
-    }
-    .correct {
+    }}
+    .correct {{
       background-color: #d1fae5 !important;
       color: #065f46;
       border-color: #10b981;
-    }
-    .incorrect {
+    }}
+    .incorrect {{
       background-color: #fee2e2 !important;
       color: #991b1b;
       border-color: #ef4444;
-    }
-    .explanation {
+    }}
+    .explanation {{
       background-color: #e0f2fe;
       border-left: 4px solid #38bdf8;
       padding: 10px;
       margin-top: 5px;
       display: none;
-    }
-    #score {
+    }}
+    #score {{
       text-align: center;
       font-weight: bold;
       color: #1e40af;
       margin-top: 20px;
-    }
-    #reset {
+    }}
+    #reset {{
       display: block;
       margin: 20px auto 0;
       padding: 10px 20px;
@@ -78,88 +95,64 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
-    }
-    #reset:hover {
+    }}
+    #reset:hover {{
       background-color: #2563eb;
-    }
+    }}
   </style>
 </head>
 <body>
   <header>Economic Insights Quiz</header>
   <div class="quiz-container" id="quiz">
-
-    <!-- START OF 12 QUESTIONS -->
-    <!-- Replace with unique content as needed -->
-    <!-- All use same structure for now -->
-
-    <!-- Question Block Template -->
-    <!-- Copy and customize these as needed -->
-    <!-- Question 1 to 12 -->
-    <!-- For demonstration: same question repeated -->
-    <!-- Replace text with real quiz content -->
-
-    <!-- QUESTION 1 to 12 -->
-    <!-- Paste in full -->
-
-    <!-- Start -->
-    <!-- We'll generate it dynamically to avoid repeating lines -->
-    <script>
-      const quizContainer = document.getElementById("quiz");
-      let questionsHTML = "";
-      for (let i = 1; i <= 12; i++) {{
-        questionsHTML += `
-        <div class="question" data-answer="b">
-          <h3>${i}. What typically lags GDP contraction during a downturn?</h3>
-          <div class="options">
-            <button>A. Stock prices</button>
-            <button data-correct="true">B. Employment</button>
-            <button>C. Consumer spending</button>
-            <button>D. Export levels</button>
-          </div>
-          <div class="explanation">Employment tends to lag GDP as companies delay layoffs.</div>
-        </div>`;
-      }}
-      quizContainer.insertAdjacentHTML("afterbegin", questionsHTML);
-    </script>
-
+    {hardcoded_questions}
     <div id="score"></div>
     <button id="reset">Reset Quiz</button>
   </div>
 
   <script>
+    const quiz = document.querySelectorAll(".question");
     let score = 0;
-    document.addEventListener("click", function (e) {
-      if (!e.target.matches(".options button")) return;
 
-      const btn = e.target;
-      const questionDiv = btn.closest(".question");
+    quiz.forEach((q) => {{
+      const buttons = q.querySelectorAll("button");
+      const explanation = q.querySelector(".explanation");
+      buttons.forEach(btn => {{
+        btn.addEventListener("click", () => {{
+          if (q.classList.contains("answered")) return;
 
-      if (questionDiv.classList.contains("answered")) return;
-      questionDiv.classList.add("answered");
+          q.classList.add("answered");
+          const correct = btn.hasAttribute("data-correct");
 
-      const isCorrect = btn.hasAttribute("data-correct");
-      if (isCorrect) {
-        btn.classList.add("correct");
-        score++;
-      } else {
-        btn.classList.add("incorrect");
-        questionDiv.querySelectorAll("button").forEach(b => {
-          if (b.hasAttribute("data-correct")) b.classList.add("correct");
-        });
-      }
+          if (correct) {{
+            btn.classList.add("correct");
+            score++;
+          }} else {{
+            btn.classList.add("incorrect");
+            buttons.forEach(b => {{
+              if (b.hasAttribute("data-correct")) b.classList.add("correct");
+            }});
+          }}
 
-      questionDiv.querySelector(".explanation").style.display = "block";
+          explanation.style.display = "block";
 
-      const total = document.querySelectorAll(".question").length;
-      const answered = document.querySelectorAll(".question.answered").length;
-      if (answered === total) {
-        document.getElementById("score").textContent = "Your Score: " + score + " / " + total;
-      }
-    });
+          const unanswered = document.querySelectorAll(".question:not(.answered)").length;
+          if (unanswered === 0) {{
+            document.getElementById("score").textContent = "Your Score: " + score + " / " + quiz.length;
+          }}
+        }});
+      }});
+    }});
 
-    document.getElementById("reset").addEventListener("click", () => {
+    document.getElementById("reset").addEventListener("click", () => {{
       location.reload();
-    });
+    }});
   </script>
 </body>
 </html>
+"""
+
+# Save final GitHub-compatible version with hardcoded questions
+final_html_path = Path("/mnt/data/index_hardcoded.html")
+final_html_path.write_text(html_hardcoded.strip())
+
+final_html_path.name
